# autoconfig

./: README.md  pyproject.toml
.github/workflows/: release.yml
autoconfig/: __init__.py  cli.py  config.py  env.py  loaders.py  merger.py  parser.py  validation.py
tests/: test_basic.py  test_env_loader.py  test_merger_edge_cases.py  test_validation.py
