[project]
name = "autoconfig"
version = "0.1.0"
description = "Simple AutoConfig: env extraction + unified config loader (env/json/yaml/toml)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
urls = { 
    "Homepage" = "https://github.com/username/autoconfig",
    "Documentation" = "https://github.com/username/autoconfig#readme"
}

[project.scripts]
autoconfig = "autoconfig.cli:main"

[project.optional-dependencies]
yaml = ["PyYAML>=5.4"]
toml = ["tomli>=2.0.1"]
env = ["python-dotenv>=0.19.0"]
all = ["PyYAML>=5.4", "tomli>=2.0.1", "python-dotenv>=0.19.0"]
dev = ["pytest>=7.0", "PyYAML", "tomli>=2.0.1", "python-dotenv"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
